feat: add yellow to global styles

--- a/src/global.css
+++ b/src/global.css
@@ -6,7 +6,9 @@
   --gray-600: #323238;
   --gray-700: #29292e;
   --gray-800: #202024;
-  --gray-900: #121214;
+  --gray-900: #161616;
+
+  --yellow-400: #a78300;
 
   --green-300: #00b37e;
   --green-500: #00875f;
