--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,6 @@
 :root {
   --white: #fff;
+
   --gray-100: #e1e1e6;
   --gray-300: #c4c4cc;
   --gray-400: #8d8d99;
@@ -7,6 +8,8 @@
   --gray-700: #29292e;
   --gray-800: #202024;
   --gray-900: #161616;
+
+  --blue-100: #00daff;
 
   --yellow-400: #a78300;
 
