--- a/src/components/Message.module.css
+++ b/src/components/Message.module.css
@@ -3,6 +3,13 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #0000008b;
+  backdrop-filter: blur(6px);
+  display: flex;
+  justify-content: center;
   text-align: center;
 }
 
