--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,3 +4,17 @@
   flex-direction: column;
   align-items: center;
 }
+
+.keyboardPlace {
+  margin-top: 120px;
+}
+
+.hide {
+  display: none;
+}
+
+.keyboard {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
