--- a/src/components/Message.module.css
+++ b/src/components/Message.module.css
@@ -28,7 +28,7 @@
   font-weight: bold;
   cursor: pointer;
 
-  transition: background-color 1s;
+  transition: background 1s;
 }
 
 .wrapper button:hover {
