--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -14,7 +14,7 @@
 
 .wrapper span a:hover {
   text-decoration: none;
-  color: var(--blue-100);
+  color: var(--green-300);
 }
 
 @media only screen and (max-width: 600px) {
