--- a/src/components/Letter.module.css
+++ b/src/components/Letter.module.css
@@ -57,10 +57,10 @@
 
   .wrapperEmpty:hover {
     cursor: pointer;
-    border: 4px solid var(--gray-400);
+    border: 4px solid var(--green-300);
   }
 
   .wrapperFocused {
-    border: 4px solid var(--gray-400);
+    border: 4px solid var(--green-300);
   }
 }
